array.island.Island.scala.error
Erreur de compilation :
Island:7: error: not found: value DoubleEtage
      DoubleEtage = DoubleEtage + 1 
      ^Island:8: error: reassignment to val
      k=k+1
       ^Island:10: error: reassignment to val
      k=k+1
       ^Island:14: error: not found: value DoubleEtage
        return DoubleEtage/2
               ^